fixed button misalignment

--- a/client/style.css
+++ b/client/style.css
@@ -97,6 +97,7 @@ img {
   margin: 0;
   width: 40px;
   height: 40px;
+  vertical-align: bottom;
 }
 
 .search button:hover {
